--- a/style.css
+++ b/style.css
@@ -165,6 +165,23 @@ body {
   text-align: center;
 }
 
+.project-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+
+.github-link {
+  color: var(--main-white);
+  font-size: 1.5rem;
+  transition: color 0.3s ease-out;
+}
+
+.github-link:hover {
+  color: var(--main-blue);
+}
+
 #projects {
   padding: 60px 0;
   background: none;
